Closed Bug 1614547 Opened 6 years ago Closed 6 years ago

Ensure AudioIPC client threads call PROFILER_UNREGISTER_THREAD to avoid leaks

Categories

(Core :: Audio/Video: cubeb, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: kinetik, Assigned: kinetik)

References

Details

Attachments

(2 files)

See Also: → 1602689
Attached file GitHub Pull Request
Pushed by mgregan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6922e2a2aad6 Ensure AudioIPC client threads call PROFILER_UNREGISTER_THREAD. r=chunmin
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: