Bug 1614547 - Ensure AudioIPC client threads call PROFILER_UNREGISTER_THREAD.  r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D62402